--- a/index.html
+++ b/index.html
@@ -1,2 +1,4 @@
-<h1>欢迎访问BinZhijie的网站！</h1>
+<h1>欢迎访问BinZhijie的网站！
+正在自动跳转...
+</h1>
 <meta http-equiv="refresh" content="0;url= https://www.cnblogs.com/bzjvip ">
