--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <h1>欢迎访问BinZhijie的网站！</h1>
-<h1>正在自动跳转...</h1>
+<!-- <h1>正在自动跳转...</h1> -->
 <title>BinZhijie's Blog</title>
-<meta http-equiv="refresh" content="0;url= https://www.cnblogs.com/bzjvip ">
+<!-- <meta http-equiv="refresh" content="0;url= https://www.cnblogs.com/bzjvip "> -->
+<a href="https://www.cnblogs.com/bzjvip">点击访问博客园站点</a>
+
+<p>快捷链接：<br></p>
+<a href="https://www.123pan.com/s/K9i0Vv-JiSgH.html">RollCall点名器下载</a>
