--- a/index.html
+++ b/index.html
@@ -6,3 +6,4 @@
 
 <p>快捷链接：<br></p>
 <a href="https://www.123pan.com/s/K9i0Vv-JiSgH.html">RollCall点名器下载</a><br>
+<a href="/student_email/index.html">学生会专用邮件下载</a>
