--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<link rel="icon" href="./icon.ico" sizes="16x16" />
+
 <h1>欢迎访问BinZhijie的网站！</h1>
 <!-- <h1>正在自动跳转...</h1> -->
 <title>BinZhijie's Blog</title>
