--- a/index.html
+++ b/index.html
@@ -1,11 +1,110 @@
-<link rel="icon" href="./icon.ico" sizes="16x16" />
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>BinZhijie's Blog</title>
+  <link rel="icon" href="https://www.zhijiebin.dpdns.org/icon.ico" sizes="16x16" />
+  <style>
+    :root {
+      --bg: #f0f8ff;
+      --blue: #5f9ea0;
+      --blue-dark: #3e7b7d;
+      --text: #333;
+      --link-color: #007BFF;
+      --link-hover-color: #0056b3;
+    }
 
-<h1>欢迎访问BinZhijie的网站！</h1>
-<!-- <h1>正在自动跳转...</h1> -->
-<title>BinZhijie's Blog</title>
-<!-- <meta http-equiv="refresh" content="0;url= https://www.cnblogs.com/bzjvip "> -->
-<a href="https://www.cnblogs.com/bzjvip">点击访问博客园站点</a>
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, sans-serif;
+      background: var(--bg);
+      color: var(--text);
+      margin: 0;
+      padding: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      min-height: 100vh;
+    }
 
-<p>快捷链接：<br></p>
-<a href="https://www.123pan.com/s/K9i0Vv-JiSgH.html">RollCall点名器下载</a><br>
-<a href="/student_email/index.html">学生会专用邮件下载</a>
+    h1 {
+      margin: 2rem 0;
+      color: var(--blue-dark);
+    }
+
+    a {
+      color: var(--link-color);
+      text-decoration: none;
+      font-weight: 600;
+      transition: .3s;
+    }
+
+    a:hover {
+      color: var(--link-hover-color);
+      text-decoration: underline;
+    }
+
+    .container {
+      margin: 2rem 0;
+      max-width: 800px;
+      width: 100%;
+      padding: 2rem;
+      background: white;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      border-radius: 8px;
+    }
+
+    .section {
+      margin: 1rem 0;
+    }
+
+    .section h2 {
+      margin-bottom: 1rem;
+      color: var(--blue-dark);
+    }
+
+    .quick-links {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    .quick-links a {
+      margin: 0.5rem 0;
+    }
+
+    footer {
+      background: #fff;
+      text-align: center;
+      padding: 1rem;
+      color: #555;
+      font-size: 0.9rem;
+      margin-top: auto;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h1>欢迎访问BinZhijie的网站！</h1>
+    
+    <div class="section">
+      <!-- <h1>正在自动跳转...</h1> -->
+      <a href="https://www.cnblogs.com/bzjvip">点击访问博客园站点</a>
+    </div>
+    
+    <div class="section">
+      <h2>快捷链接</h2>
+      <div class="quick-links">
+        <a href="https://www.zhijiebin.dpdns.org/server_website/index.html">访问飘秋云岭服务器网站</a>
+        <a href="https://www.123pan.com/s/K9i0Vv-JiSgH.html">RollCall点名器下载</a>
+        <a href="/student_email/index.html">学生会专用邮件下载</a>
+      </div>
+    </div>
+  </div>
+
+  <footer>BinZhijie &copy; 2024</footer>
+
+</body>
+</html>
