--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>BinZhijie's Blog</title>
-  <link rel="icon" href="https://www.zhijie.qzz.io/icon.ico" sizes="16x16" />
+  <link rel="icon" href="/icon.ico" sizes="16x16" />
   <style>
     :root {
       --bg: #f0f8ff;
@@ -97,8 +97,8 @@
     <div class="section">
       <h2>快捷链接</h2>
       <div class="quick-links">
-        <a href="./server_website/index.html">访问飘秋云岭服务器网站</a>
-        <a href="./pass.html">文字加密</a>
+        <a href="/server_website/index.html">访问飘秋云岭服务器网站</a>
+        <a href="/pass.html">文字加密</a>
         <a href="https://www.123pan.com/s/K9i0Vv-JiSgH.html">RollCall点名器下载</a>
         <a href="/student_email/index.html">学生会专用邮件下载</a>
       </div>
