--- a/pass.html
+++ b/pass.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ZHIJIE DEFINITELY</title>
-    <link rel="icon" href="https://www.zhijiebin.dpdns.org/icon.ico" sizes="16x16" />
+    <link rel="icon" href="/icon.ico" sizes="16x16" />
     <style>
         :root {
             --bg: #f0f8ff;
