--- a/rollcall/index.html
+++ b/rollcall/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <title>RollCall点名器</title>
+<link rel="icon" href="/icon.ico" sizes="16x16" />
 <body>
     <h1>RollCall点名器</h1>
     <p>
