--- a/server_website/index.html
+++ b/server_website/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-<link rel="icon" href="https://www.zhijiebin.dpdns.org/icon.ico" sizes="16x16" />
+<link rel="icon" href="/icon.ico" sizes="16x16" />
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
