--- a/index.html
+++ b/index.html
@@ -83,6 +83,30 @@
       font-size: 0.9rem;
       margin-top: auto;
     }
+
+    /* 响应式调整 */
+    @media (max-width: 600px) {
+      body {
+        padding: 1rem;
+      }
+      .container {
+        padding: 1rem;
+      }
+      h1 {
+        margin: 1rem 0;
+        font-size: 2rem;
+      }
+      .section h2 {
+        font-size: 1.8rem;
+      }
+      .quick-links a {
+        margin: 0.3rem 0;
+        font-size: 1.2rem;
+      }
+      footer {
+        padding: 0.5rem;
+      }
+    }
   </style>
 </head>
 <body>
@@ -90,7 +114,6 @@
     <h1>欢迎访问BinZhijie的网站！</h1>
     
     <div class="section">
-      <!-- <h1>正在自动跳转...</h1> -->
       <a href="https://www.cnblogs.com/bzjvip">点击访问博客园站点</a>
     </div>
     
@@ -106,6 +129,5 @@
   </div>
 
   <footer>BinZhijie &copy; 2025</footer>
-
 </body>
 </html>
