--- a/pass.html
+++ b/pass.html
@@ -38,7 +38,7 @@
             margin: 2rem 0;
             max-width: 800px;
             width: 100%;
-            padding: 2rem;
+            padding: 1rem;
             background: white;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             border-radius: 8px;
@@ -50,17 +50,19 @@
 
         .button-group {
             display: flex;
-            justify-content: center;
+            flex-direction: column;
+            align-items: center;
         }
 
         button {
-            padding: 10px 15px;
+            padding: 0.75rem 1.5rem;
             border: none;
             background-color: var(--blue);
             color: white;
-            border-radius: 4px;
+            border-radius: 50px;
             cursor: pointer;
             margin: 0.5rem;
+            transition: .3s;
         }
 
         button:hover {
@@ -75,11 +77,40 @@
 
         input[type="text"], textarea {
             width: 100%;
-            padding: 10px;
+            padding: 0.75rem;
             border: 1px solid #ddd;
-            border-radius: 4px;
+            border-radius: 50px;
             box-sizing: border-box;
             margin-bottom: 1rem;
+            resize: vertical;
+        }
+
+        /* 响应式调整 */
+        @media (max-width: 600px) {
+            body {
+                padding: 1rem;
+            }
+            .container {
+                padding: 1rem;
+            }
+            h1, h2 {
+                margin: 1.5rem 0;
+                font-size: 1.8rem;
+            }
+            .section {
+                margin: 0.5rem 0;
+            }
+            button {
+                padding: 0.5rem 1rem;
+                font-size: 1rem;
+            }
+            label {
+                margin-bottom: 0.3rem;
+            }
+            input[type="text"], textarea {
+                padding: 0.5rem;
+                font-size: 1rem;
+            }
         }
     </style>
 </head>
