--- a/server_website/index.html
+++ b/server_website/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>飘秋云岭 - 我的世界服务器</title>
+  <link rel="icon" href="/icon.ico" sizes="16x16" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
   <style>
     :root {
