--- a/server_website/index.html
+++ b/server_website/index.html
@@ -169,12 +169,12 @@
   <section id="home" class="hero">
     <h1>飘秋云岭</h1>
     <p>一个普通的生存服，欢迎来玩</p>
-    <div class="ip-btn" onclick="copyIP()">zhijiebin.dpdns.org</div>
+    <div class="ip-btn" onclick="copyIP()">play.zhijie.qzz.io</div>
     <div class="cta">
       <a href="#join">立即加入</a>
       <a href="#features">看看特色</a>
     </div>
-    <img src="https://motd.minebbs.com/api/status_img?ip=zhijiebin.dpdns.org&stype=auto&theme=simple" 
+    <img src="https://motd.minebbs.com/api/status_img?ip=play.zhijie.qzz.io&stype=auto&theme=simple" 
          width="500" 
          height="300" 
          style="max-width: 100%; height: auto; margin: 50px" />
@@ -230,11 +230,11 @@
       </div>
       <div class="card">
         <h3>步骤2</h3>
-        <p>多人游戏→添加服务器→地址：<br><strong>zhijiebin.dpdns.org</strong></p>
+        <p>多人游戏→添加服务器→地址：<br><strong>play.zhijie.qzz.io</strong></p>
       </div>
       <div class="card">
         <h3>步骤3</h3>
-        <p>QQ群 123456789 申请白名单。</p>
+        <p>QQ群 859034554 申请白名单。</p>
       </div>
     </div>
   </section>
@@ -243,7 +243,7 @@
 
   <script>
     function copyIP() {
-      navigator.clipboard.writeText('zhijiebin.dpdns.org');
+      navigator.clipboard.writeText('play.zhijie.qzz.io');
       alert('已复制服务器地址');
     }
   </script>
