--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
     <h1>欢迎访问BinZhijie的网站！</h1>
     
     <div class="section">
-      <a href="https://www.cnblogs.com/bzjvip">点击访问博客园站点</a>
+      <a href="https://www.cnblogs.com/bzjvip">点击访问官网博客</a>
+      <a href="https://www.cnblogs.com/bzjvip">点击访问博客园站点(旧)</a>
     </div>
     
     <div class="section">
