--- a/index.html
+++ b/index.html
@@ -114,12 +114,12 @@
 <body>
   <div class="container">
     <h1>欢迎访问BinZhijie的网站！</h1>
-    
-    <div class="section">
-      <a href="https://www.cnblogs.com/bzjvip">点击访问官网博客</a>
+
+    <div class="quick-links">
+      <a href="https://www.zhijie.qzz.io/blog">点击访问官网博客</a>
       <a href="https://www.cnblogs.com/bzjvip">点击访问博客园站点(旧)</a>
     </div>
-    
+
     <div class="section">
       <h2>快捷链接</h2>
       <div class="quick-links">
