--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
       <h2>快捷链接</h2>
       <div class="quick-links">
         <a href="/server_website/index.html">访问飘秋云岭服务器网站</a>
+        <a href="/hap-sign-utils-main/index.html">app签名工具</a>
         <a href="/pass.html">文字加密</a>
         <a href="https://www.123pan.com/s/K9i0Vv-JiSgH.html">RollCall点名器下载</a>
         <a href="/student_email/index.html">学生会专用邮件下载</a>
