--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     }
 
     footer {
-      background: #fff;
+      /* background: #fff; */
       text-align: center;
       padding: 1rem;
       color: #555;
@@ -123,16 +123,18 @@
     <div class="section">
       <h2>快捷链接</h2>
       <div class="quick-links">
+        <a href="/tools">🚀 访问新版快捷跳转中心</a>
         <a href="/server_website/index.html">访问飘秋云岭服务器网站</a>
         <a href="/password-generator">密码生成工具</a>
         <a href="/hap-sign-utils-main/index.html">app签名工具</a>
         <a href="/pass.html">文字加密</a>
         <a href="https://www.123pan.com/s/K9i0Vv-JiSgH.html">RollCall点名器下载</a>
         <a href="/student_email/index.html">学生会专用邮件下载</a>
-      </div>
+  </div>
+</div>
     </div>
   </div>
 
-  <footer>BinZhijie &copy; 2025</footer>
+  <footer>BinZhijie &copy; 2026</footer>
 </body>
 </html>
