Update tool URLs to use absolute links
Changed several tool URLs from relative paths to absolute URLs pointing to https://www.zhijie.qzz.io. This ensures correct navigation regardless of the current page location.

--- a/tools/index.html
+++ b/tools/index.html
@@ -160,22 +160,22 @@
       {
         name: "飘秋云岭服务器网站",
         desc: "飘秋云岭 Minecraft 服务器官网",
-        url: "/server_website/index.html"
+        url: "https://www.zhijie.qzz.io/server_website/index.html"
       },
       {
         name: "密码生成工具",
         desc: "生成高强度随机密码",
-        url: "/password-generator"
+        url: "https://www.zhijie.qzz.io/password-generator"
       },
       {
         name: "App签名工具",
         desc: "鸿蒙轻智能手表.app文件签名工具",
-        url: "/hap-sign-utils-main/index.html"
+        url: "https://www.zhijie.qzz.io/hap-sign-utils-main/index.html"
       },
       {
         name: "文字加密工具",
         desc: "简单文本加密/解密页面",
-        url: "/pass.html"
+        url: "https://www.zhijie.qzz.io/pass.html"
       },
       {
         name: "RollCall点名器下载",
@@ -185,7 +185,7 @@
       {
         name: "学生会专用邮件下载",
         desc: "学生会内部邮件模板下载页",
-        url: "/student_email/index.html"
+        url: "https://www.zhijie.qzz.io/student_email/index.html"
       }
     ];
 
