Comment out footer background style in index.html
The background color for the footer in tools/index.html has been commented out, possibly to allow the default or parent background to show through.

--- a/tools/index.html
+++ b/tools/index.html
@@ -127,7 +127,7 @@
       }
     }
     footer {
-      background: #fff;
+      /* background: #fff; */
       text-align: center;
       padding: 1rem;
       color: #555;
