Update quick links and add Active GitHub Forks tool
Commented out the '飘秋云岭服务器网站' and '学生会专用邮件下载' links in index.html. Added a new tool entry for 'Active GitHub Forks' in tools/index.html.

--- a/tools/index.html
+++ b/tools/index.html
@@ -168,6 +168,11 @@
         url: "https://www.zhijie.qzz.io/password-generator"
       },
       {
+        name: "Active GitHub Forks",
+        desc: "Find active github forks of a repo https://git.io/vSnrC",
+        url: "https://www.zhijie.qzz.io/active-forks/"
+      },
+      {
         name: "App签名工具",
         desc: "鸿蒙轻智能手表.app文件签名工具",
         url: "https://www.zhijie.qzz.io/hap-sign-utils-main/index.html"
