--- a/tools/index.html
+++ b/tools/index.html
@@ -191,6 +191,11 @@
         name: "学生会专用邮件下载",
         desc: "学生会内部邮件模板下载页",
         url: "https://www.zhijie.qzz.io/student_email/index.html"
+      },
+      {
+        name: "开源阅读资源下载",
+        desc: "开源阅读资源下载",
+        url: "https://www.zhijie.qzz.io/legado-web/"
       }
     ];
 
