--- a/server_website/index.html
+++ b/server_website/index.html
@@ -361,8 +361,7 @@
       <a href="#features"><i class="fas fa-star"></i> 查看特色</a>
     </div>
     <div class="status-img-container">
-        <img src="https://motd.minebbs.com/api/status_img?ip=play.zhijie.qzz.io&stype=auto&theme=simple" 
-             alt="服务器状态" />
+        <img src="https://www.wdsjfwq.com/votebanner-1964-dvdvdv.png" alt="飘秋云岭" >
     </div>
   </section>
 
