--- a/server_website/index.html
+++ b/server_website/index.html
@@ -688,13 +688,13 @@
             <a href="#connect" class="btn btn-primary">立即加入</a>
             <a href="#features" class="btn btn-secondary">了解特色</a>
         </div>
-        <div>
-          <img src="https://motd.minebbs.com/api/status_img?ip=play.zhijiebin.top&port=25565&stype=auto&theme=simple" style="margin: 50px;">
-        </div>
     </section>
 
     <!-- 服务器信息区域 -->
     <section class="section" id="info">
+        <div style="text-align: center;">
+          <img src="https://motd.minebbs.com/api/status_img?ip=play.zhijiebin.top&port=25565&stype=auto&theme=simple" style="margin: 30px;height: 250px;width: auto">
+        </div>
         <div class="section-title">
             <h2>服务器信息</h2>
             <p>快速了解如何连接到我们的服务器</p>
