--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
     const blogLinks = [
       {
         title: "📝 官网博客",
-        url: "https://www.zhijiebin.top/blog",
+        url: "https://blog.zhijiebin.top",
         description: "查看我的最新技术分享与心得"
       },
       {
